Add smoke test for homepage

--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>To Do</title>
+  <title><h1>To Do</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-  <h1>To Do List</h1>
-
 
 <%= yield %>
 
