--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title><h1>To Do</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<%= link_to "Add a new to do", new_todo_path %>
 
-<%= yield %>
-
-</body>
-</html>
+<ul class="todos">
+  <% @todos.each do |todo| %>
+    <li><%= todo.title %></li>
+    <% end %>
+</ul>
